<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">炉石传说卡牌</string>
    <string name="action_settings">Settings</string>
    <string name="default_card">阿莱克丝塔萨</string>
    <string name="default_card_cost">9</string>
    <string name="default_count">355</string>
    <string name="tab_cardtool">卡牌工具</string>
    <string name="tab_cardgroup">卡组模拟器</string>
    <string name="search_precise">精确筛选</string>
    <string name="search_fuzzy">模糊查找</string>
    <string name="search_fuzzy_1">1、如果通过精确筛选无法查找到你想看到的卡牌，你还可以通过输入关键字进行模糊查找。</string>
    <string name="search_fuzzy_2">2、关键字是指你所要找的卡牌名称或卡牌描述中所包含的关键字。</string>
    <string name="search_all">全库查找</string>
    <string name="reset">重置</string>
    <string name="search">搜索</string>
    <string name="canel">清空</string>
    <string name="search_type">类别:</string>
    <string name="search_race">种族:</string>
    <string name="search_skill">效果:</string>
    <string name="search_type_1">随从</string>
    <string name="search_type_2">法术</string>
    <string name="search_type_3">武器</string>
    <string name="search_race_1">鱼人</string>
    <string name="search_race_2">恶魔</string>
    <string name="search_race_3">野兽</string>
    <string name="search_race_4">龙</string>
    <string name="search_race_5">海盗</string>
    <string name="search_skill_1">战吼</string>
    <string name="search_skill_2">冲锋</string>
    <string name="search_skill_3">连击</string>
    <string name="search_skill_4">亡语</string>
    <string name="search_skill_5">圣盾</string>
    <string name="search_skill_6">过载</string>
    <string name="search_skill_7">奥秘</string>
    <string name="search_skill_8">沉默</string>
    <string name="search_skill_9">潜行</string>
    <string name="search_skill_10">嘲讽</string>
    <string name="search_skill_11">风怒</string>
    <string name="search_skill_12">抉择</string>
    <string name="search_skill_13">激怒</string>
    <string name="search_skill_14">法术伤害</string>
    <string name="level_all">稀有度</string>
    <string name="level_0">基本</string>
    <string name="level_1">普通</string>
    <string name="level_2">精良</string>
    <string name="level_3">史诗</string>
    <string name="level_4">传说</string>
    <string name="no_0">0</string>
    <string name="no_1">1</string>
    <string name="no_2">2</string>
    <string name="no_3">3</string>
    <string name="no_4">4</string>
    <string name="no_5">5</string>
    <string name="no_6">6</string>
    <string name="no_7">7+</string>
    <string name="str_group_card">自定义卡组牧师</string>
</resources>
