<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/title_bar_cost_back"
            android:layout_width="@dimen/btn_cost_wh"
            android:layout_height="@dimen/btn_title_h"
            android:background="@drawable/back"
            android:button="@null"
            android:gravity="center" />

        <RadioGroup
            android:id="@+id/rg_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/title_bar_cost_all" >

            <RadioButton
                android:id="@+id/title_bar_cost_all"
                android:layout_width="@dimen/btn_cost_wh"
                android:layout_height="@dimen/btn_title_h"
                android:background="@drawable/btn_cost"
                android:button="@null"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/title_bar_cost_0"
                android:layout_width="@dimen/btn_cost_wh"
                android:layout_height="@dimen/btn_title_h"
                android:background="@drawable/btn_cost"
                android:button="@null"
                android:gravity="center"
                android:text="@string/no_0"
                android:textColor="@color/TextColor"
                android:textSize="@dimen/font_no"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/title_bar_cost_1"
                android:layout_width="@dimen/btn_cost_wh"
                android:layout_height="@dimen/btn_title_h"
                android:background="@drawable/btn_cost"
                android:button="@null"
                android:gravity="center"
                android:text="@string/no_1"
                android:textColor="@color/TextColor"
                android:textSize="@dimen/font_no"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/title_bar_cost_2"
                android:layout_width="@dimen/btn_cost_wh"
                android:layout_height="@dimen/btn_title_h"
                android:background="@drawable/btn_cost"
                android:button="@null"
                android:gravity="center"
                android:text="@string/no_2"
                android:textColor="@color/TextColor"
                android:textSize="@dimen/font_no"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/title_bar_cost_3"
                android:layout_width="@dimen/btn_cost_wh"
                android:layout_height="@dimen/btn_title_h"
                android:background="@drawable/btn_cost"
                android:button="@null"
                android:gravity="center"
                android:text="@string/no_3"
                android:textColor="@color/TextColor"
                android:textSize="@dimen/font_no"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/title_bar_cost_4"
                android:layout_width="@dimen/btn_cost_wh"
                android:layout_height="@dimen/btn_title_h"
                android:background="@drawable/btn_cost"
                android:button="@null"
                android:gravity="center"
                android:text="@string/no_4"
                android:textColor="@color/TextColor"
                android:textSize="@dimen/font_no"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/title_bar_cost_5"
                android:layout_width="@dimen/btn_cost_wh"
                android:layout_height="@dimen/btn_title_h"
                android:background="@drawable/btn_cost"
                android:button="@null"
                android:gravity="center"
                android:text="@string/no_5"
                android:textColor="@color/TextColor"
                android:textSize="@dimen/font_no"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/title_bar_cost_6"
                android:layout_width="@dimen/btn_cost_wh"
                android:layout_height="@dimen/btn_title_h"
                android:background="@drawable/btn_cost"
                android:button="@null"
                android:gravity="center"
                android:text="@string/no_6"
                android:textColor="@color/TextColor"
                android:textSize="@dimen/font_no"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/title_bar_cost_7"
                android:layout_width="@dimen/btn_cost_wh"
                android:layout_height="@dimen/btn_title_h"
                android:background="@drawable/btn_cost"
                android:button="@null"
                android:gravity="center"
                android:text="@string/no_7"
                android:textColor="@color/TextColor"
                android:textSize="@dimen/font_no"
                android:textStyle="italic" />
        </RadioGroup>
    </LinearLayout>

</HorizontalScrollView>